--- a/proxy/src/main/resources/application.yaml
+++ b/proxy/src/main/resources/application.yaml
@@ -1,5 +1,7 @@
 logging:
   file: logs/proxy_server.log
+  level:
+    root: INFO
 spring:
   data:
     mongodb:
@@ -7,10 +9,11 @@ spring:
 server:
   port: 9090
 proxyServer:
+  SSLEnabled: true
   port: 9080
-  rootCertificatePath: /tmp/certificate.cer
-  privateKeyPath: /tmp/private-key.pem
-  rootCertificateAndKeyPath: /tmp/keystore.p12
+  rootCertificatePath: /data/proxy/file/certificate.cer
+  privateKeyPath: /data/proxy/file/private-key.pem
+  rootCertificateAndKeyPath: /data/proxy/file/keystore.p12
   passwordForPrivateKey: 1q2w3e4r
   keyStoreType: PKCS12
   privateKeyAlias: ProxyServerPrivateKey
